2015-09-28  Per Bothner  <per@bothner.com>

	Rewrite macro bodies lazily to beter handle forward references.
	* standard/define_syntax.java (scanForm): Don't rewrite the macro rule
	eagerly, as that doesn't handle forward references properly.  Instead,
	do the rewrite lazily if the macro is used *or* later, at rewrite time.
	(rewriteForm): Do write if not done yet.  Handle make call here.
	* lang/Macro.java (rewriteIfNeeded): New method.
	(expand): Call rewriteIfNeeded.
	* lang/SyntaxTemplate.java (convert_template): Only noteAccess for
	top-level macros.
	* lang/Translator.java (resolveModule): Move processAccesses after
	rewrites.

2015-09-24  Per Bothner  <per@bothner.com>

	* standard/Include.java: Prevent require/import in included file from
	causing the parse to be pending.
	* lang/Translator.java: Require pendingForm to be null in addition to
	PROLOG_state be STATE before handling the former.
	This avoids being triggered by the above change to Include.
	* standard/module_name.java: Error if too-late module-name.

	* standard/ImportFromLibrary.java (SRFI97Map): Add SRFI 35
	and name it "conditions", even though it is not supported by SRFI 97.

2015-09-20  Per Bothner  <per@bothner.com>

	Allow 'synchronized and 'strictfp as access flags for methods.
	* lang/Lambda.java (rewriteAttrs): Use object.addAccessFlags.
	* standard/object.java (addAccessFlags): Make public.
	(matchAccess1): Recognize "synchronized" and "strictfp".

2015-09-17  Per Bothner  <per@bothner.com>

	Fix bug in class name mangling; modularize.
	* standard/define_library.java: Use new Compilation.mangleClassName.
	* standard/ImportFromLibrary.java: Likewise.
	* standard/module_name.java: Likewise.
	* standard/require.java: Add missing mangling from module to class name.

2015-07-17  Per Bothner  <per@bothner.com>

	* lang/BindDecls.java (setInitializer): Use LetExp.IS_BODY_SCOPE.
	* lang/Translator.java (rewrite_body): Set IS_BODY_SCOPE.

2015-07-15  Per Bothner  <per@bothner.com>
